// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-inputs/InputField renders correctly 1`] = `
<View>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#5E6678",
          "fontFamily": "Inter-Medium",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    title
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly disabled 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly disabled 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "#D1D4DB",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly focused/blur 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly focused/blur 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly valid 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly valid 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "#2B78EE",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly wrong 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#F54D3D",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#F54D3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly wrong 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "#F54D3D",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "minWidth": 195,
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      style={
        Array [
          Object {
            "flex": 1,
            "padding": 0,
          },
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#F54D3D",
          "fontFamily": "Neotis",
          "fontSize": 24,
          "marginRight": 6,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#F54D3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;
